#Project Setub , Database Created

--- a/Training_Sys.Web/Training_Sys.Web.csproj
+++ b/Training_Sys.Web/Training_Sys.Web.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Repository\TrainingSys.Repository.csproj" />
+    <ProjectReference Include="..\Training_Sys.Infrastructure\Training_Sys.Infrastructure.csproj" />
   </ItemGroup>
+
 
 </Project>
