--- a/Training_Sys.Web/appsettings.json
+++ b/Training_Sys.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source = THAWTHONA\\SQLEXPRESS; Initial Catalog = TrainingMangementSystem; Integrated Security = True; TrustServerCertificate = True;"
+  }
 }
