#CourseController , add,index,delete,update.search

--- a/Training_Sys.Web/Training_Sys.Web.csproj
+++ b/Training_Sys.Web/Training_Sys.Web.csproj
@@ -10,5 +10,9 @@
     <ProjectReference Include="..\Training_Sys.Infrastructure\Training_Sys.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+  </ItemGroup>
+
 
 </Project>
